--- a/unimailhub/src/main/resources/application.properties
+++ b/unimailhub/src/main/resources/application.properties
@@ -11,5 +11,12 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+# MailHog configuration
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
 
 server.port=8080
